force-app/main/default/objects/vlocity_ps__CompiledAttributeOverride__c/fields/vlocity_ps__AttributeMetadata__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeMetadata__c</fullName>
    <label>Attribute Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>