force-app/main/default/objects/vlocity_ps__CompiledAttributeOverride__c/fields/vlocity_ps__AttributeMetadataChanges__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeMetadataChanges__c</fullName>
    <label>Attribute Metadata Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>