force-app/main/default/objects/vlocity_ps__CompiledAttributeOverride__c/fields/vlocity_ps__AttributeRules__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeRules__c</fullName>
    <label>Attribute Rules</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>