force-app/main/default/objects/vlocity_ps__CompiledAttributeOverride__c/fields/vlocity_ps__ProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the Offer product which is the subject of this Compiled Attribute Override.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Compiled Attribute Overrides</relationshipLabel>
    <relationshipName>CompiledAttributeOverrides</relationshipName>
    <type>Lookup</type>
</CustomField>